2.2.2/_sources/gallery/user_interfaces/mpl_with_glade_316_sgskip.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_user_interfaces_mpl_with_glade_316_sgskip.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_user_interfaces_mpl_with_glade_316_sgskip.py:


=========================
Matplotlib With Glade 316
=========================




.. code-block:: python


    from gi.repository import Gtk

    from matplotlib.figure import Figure
    from matplotlib.axes import Subplot
    from matplotlib.backends.backend_gtk3agg import (
        FigureCanvasGTK3Agg as FigureCanvas)
    import numpy as np


    class Window1Signals(object):
        def on_window1_destroy(self, widget):
            Gtk.main_quit()


    def main():
        builder = Gtk.Builder()
        builder.add_objects_from_file("mpl_with_glade_316.glade", ("window1", ""))
        builder.connect_signals(Window1Signals())
        window = builder.get_object("window1")
        sw = builder.get_object("scrolledwindow1")

        # Start of Matplotlib specific code
        figure = Figure(figsize=(8, 6), dpi=71)
        axis = figure.add_subplot(111)
        t = np.arange(0.0, 3.0, 0.01)
        s = np.sin(2*np.pi*t)
        axis.plot(t, s)

        axis.set_xlabel('time [s]')
        axis.set_ylabel('voltage [V]')

        canvas = FigureCanvas(figure)  # a Gtk.DrawingArea
        canvas.set_size_request(800, 600)
        sw.add_with_viewport(canvas)
        # End of Matplotlib specific code

        window.show_all()
        Gtk.main()

    if __name__ == "__main__":
        main()


.. _sphx_glr_download_gallery_user_interfaces_mpl_with_glade_316_sgskip.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: mpl_with_glade_316_sgskip.py <mpl_with_glade_316_sgskip.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: mpl_with_glade_316_sgskip.ipynb <mpl_with_glade_316_sgskip.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
